--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,9 @@ body {
 
 .header__content {
   background-image: url(../images/header-bg.png);
-  /* width: 1920px;
-    height: 1027px;
-    margin: 0 auto; */
+  width: 1920px;
+  height: 1027px;
+  margin: 0 auto;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -84,4 +84,21 @@ body {
 
   width: 590px;
   text-align: center;
+  padding-left: 0px;
+  padding-top: 250px;
+  margin-bottom: 130px;
+}
+
+.header-slider {
+  max-width: 410px;
+  min-height: 200px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+  margin-left: 80px;
 }
