--- a/css/style.css
+++ b/css/style.css
@@ -79,26 +79,87 @@ body {
   font-weight: 700;
   line-height: 130%;
   letter-spacing: 0em;
-  text-align: left;
   color: #001e64;
 
-  width: 590px;
+  width: 500px;
   text-align: center;
   padding-left: 0px;
   padding-top: 250px;
-  margin-bottom: 130px;
+  margin-bottom: 90px;
 }
 
 .header-slider {
-  max-width: 410px;
+  max-width: 420px;
+
   min-height: 200px;
+  margin-left: 30px;
+  /*---- height to arrow --- */
+  padding-top: 50px;
+  padding-bottom: 130px;
+}
+
+.header-slider__text {
+  margin-bottom: 15px;
+  text-align: center;
   font-family: Roboto;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 120%;
+  line-height: 140%;
   letter-spacing: 0em;
   text-align: left;
   color: #ffffff;
-  margin-left: 80px;
+}
+
+.slick-prev,
+.slick-next {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  position: absolute;
+  left: -40px;
+}
+
+.slick-prev {
+  top: 0;
+}
+
+.slick-next {
+  bottom: 20px;
+}
+
+.slick-dots {
+  list-style: none;
+  position: absolute;
+  left: -38px;
+  /* top: 30px; */
+  /* line-height: 450%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  top: 40px;
+  bottom: 50px;
+}
+
+.slick-dots button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  color: #ffffff;
+  opacity: 0.5;
+}
+
+.slick-active button {
+  opacity: 1;
+}
+
+/* .slick-dots button::before {
+  content: "0"; */
 }
