--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 .header__top {
   display: flex;
   justify-content: space-between;
-  padding-top: 27px;
+  padding-top: 20px;
 }
 
 .logo {
@@ -70,7 +70,8 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding-bottom: 80px;
+  padding-bottom: 50px;
+  margin-top: -100px;
 }
 
 .title {
@@ -185,6 +186,7 @@ body {
 .header__content-box {
   display: flex;
   margin-left: 90%;
+  margin-top: -25px;
   /* margin-right: 30px; */
   /* width: 60px; */
   /* display: inline-block; */
