--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,28 @@ body {
 .header__content-link--active {
   font-weight: 700;
 }
+
+/* Main */
+
+.main {
+  width: 1112px;
+  height: 590px;
+  border: solid 2px red;
+  margin: 10px auto;
+}
+
+.product {
+  padding-top: 100px;
+}
+
+.product__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product__name {
+}
+
+.product__content {
+  width: 600px;
+}
