--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,8 @@ body {
 }
 
 .product__name-item + .product__name-item {
-  margin-top: 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .product__name-item {
@@ -330,4 +331,46 @@ span.span-title {
   line-height: 24px;
   color: #001e64;
   text-align: center;
+}
+
+.seafood__container {
+  display: inline-block;
+  transform: translateX(-350px);
+  width: 1920px;
+  height: 517px;
+  margin: 0px auto;
+}
+
+.seafood {
+  background-image: url(../images/bottom_wave.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+  padding: 290px 0 95px;
+
+  font-family: Roboto Slab;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #fff;
+}
+
+.seafood__items {
+  display: flex;
+  justify-content: space-around;
+}
+
+.seafood__item {
+  width: 180px;
+  min-height: 165px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../images/shell.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
