Main_Footer_End

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,15 @@ body {
 }
 
 .container {
-  max-width: 1220px;
-  margin: 5px auto;
-  padding: 0 10px;
+  border: solid 3px red;
+  min-width: 1920px;
+  min-height: 5000px;
+  margin: 50px auto;
+}
+
+.header__container__top {
+  margin: 0 auto;
+  width: 1200px;
 }
 
 .header__top {
@@ -73,6 +79,11 @@ body {
   background-repeat: no-repeat;
   padding-bottom: 50px;
   margin-top: -100px;
+}
+
+.header-container {
+  width: 600px;
+  margin-left: 400px;
 }
 
 .title {
@@ -186,8 +197,8 @@ body {
 
 .header__content-box {
   display: flex;
-  margin-left: 90%;
-  margin-top: -25px;
+  margin-left: 0;
+  margin-top: 50px;
   /* margin-right: 30px; */
   /* width: 60px; */
   /* display: inline-block; */
@@ -373,4 +384,55 @@ span.span-title {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+/* .seafood-box {
+} */
+.seafood-box__container {
+  width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  margin: 100px 0;
+}
+/* .seafood-box__items {
+} */
+.seafood-box__item {
+  display: flex;
+  justify-content: space-between;
+  margin: 25px 0;
+}
+
+.seafood-box__item-title {
+  max-width: 490px;
+  font-family: Roboto Slab;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  letter-spacing: 0.5px;
+  color: #001e64;
+  text-align: center;
+  padding: 25px;
+}
+.seafood-box__item-text {
+  max-width: 420px;
+  margin-bottom: 25px;
+}
+
+.seafood-box__footer {
+  width: 800px;
+  margin: 100px auto;
+}
+.seafood-box__footer-img {
+}
+.seafood-box__footer-description {
+  padding: 50px;
+  font-family: Roboto Slab;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0.5px;
+  color: #001e64;
+  text-align: center;
 }
